Добавлен редактор текста в поле text. В поле upload_at и updated_at

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,9 @@
     "yiisoft/yii2-bootstrap5": "^2.0",
     "yiisoft/yii2-httpclient": "^2.0",
     "yiisoft/yii2-queue": "^2.3",
-    "yiisoft/yii2-symfonymailer": "^2.0.0"
+    "yiisoft/yii2-symfonymailer": "^2.0.0",
+    "sjaakp/yii2-wysiwyg": "*",
+    "mihaildev/yii2-ckeditor": "*"
   },
   "require-dev": {
     "bower-asset/swagger-ui": "^4.17",
@@ -89,5 +91,6 @@
       "api\\tests\\": ["api/tests/", "api/tests/_support/"],
       "common\\tests\\": ["common/tests/", "common/tests/_support/"]
     }
-  }
+  },
+  "sjaakp/yii2-wysiwyg": "*"
 }
